# figma-product-catalog

./: .dockerignore  .env.example  .gitignore  00_START_HERE.md  AUTHORIZATION_FLOW_DIAGRAM.md  AUTHORIZATION_IMPLEMENTATION_COMPLETE.md  BACKGROUND_SERVICES_STATUS.md  BITRIX_EVENT_HANDLER.md  BITRIX_PRODUCT_UPDATE_ENDPOINT.php  BITRIX_WEBHOOK_SETUP.md  CLAUDE.md  CLIENT_USE_CASES_FEASIBILITY.md  DATABASE_GUIDE.md  DB_QUERIES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  EMBEDDING_TESTS.md  IMPLEMENTATION_STATUS.txt  IMPROVEMENTS_SUMMARY.md  INSTALLATION_COMPLETE.md  KASPI_MULTI_BIN_GUIDE.md  KASPI_R3_SETUP.md  KASPI_UI_TESTING_REPORT.md  LOCAL_SETUP_COMPLETE.md  LOCAL_TESTING_GUIDE.md  LOCAL_TESTING_REPORT.md  MARKETPLACE_API.md  MCP_TOOLS_INTEGRATION_SUCCESS.md  MOCK_DATA_AUDIT.md  ORDER_CREATION_BUG_FIX.md  PHASE_0_RESULTS.md  PHASE_1_RESULTS.md  PHASE_3_COMPLETION_SUMMARY.md  PRODUCTION_API_INTEGRATION_PLAN.md  PRODUCTION_ORDER_API_DOCUMENTATION.md  PRODUCTION_ORDER_API_FINDINGS.md  PRODUCTION_ORDER_ENDPOINT_STATUS.md  PRODUCTION_SETUP_RU.md  QUICKSTART_VISUAL_AI_BOT.md  (+69 more)
mcp-server/: CODE_REVIEW_FIXES.md  Dockerfile  E2E_TEST_RESULTS.md  ENV_SETUP.md  INTEGRATION_COMPLETE.md  MCP_FIXES_AND_STATUS.md  MCP_INSPECTOR_TESTING_GUIDE.md  MCP_SUCCESS_REPORT.md  MCP_TESTING_REPORT.md  NEXT_STEPS.md  OPTIONAL_TYPE_BUG_FIX.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  REQUEST_ID_FIX.md  TASKS_COMPLETED.md  TESTING_COMPLETE.md  TEST_REPORT.md  TEST_RESULTS.md  USAGE_GUIDE.md  VALIDATION_COMPLETE.md  demo.py  http_server.py  http_wrapper.py  pyproject.toml  (+19 more)
(+1257 files in other folders)
