[project]
name = "flower-shop-mcp"
version = "0.1.0"
description = "MCP server for Flower Shop API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "structlog>=25.4.0",
]

[project.scripts]
flower-shop-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "anthropic>=0.71.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
