[project]
name = "mcp-shared"
version = "0.1.0"
description = "Shared library for mcp-server and mcp-production"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
